--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "leslocauxdureseau",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
     "firebase": "^8.6.8",
+    "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-dom": "^18.2.0",
@@ -19,7 +26,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node src/server.js",
     "build": "react-scripts build",
+    "start:prod": "node src/server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
