FIX | update production mode

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID="969526981296"
 REACT_APP_FIREBASE_APP_ID="1:969526981296:web:045eb99087121acadc0175"
 REACT_APP_FIREBASE_MEASUREMENT_ID="G-QC1VSXGJ7E"
 SENDGRID_API_KEY="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"
+# SENDGRID_API_KEY="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"
